--- a/monopoly.cbp
+++ b/monopoly.cbp
@@ -30,6 +30,7 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-DSFML_STATIC" />
 			<Add directory="C:/SFML-2.1/include" />
 		</Compiler>
 		<Linker>
