--- a/monopoly.cbp
+++ b/monopoly.cbp
@@ -32,13 +32,17 @@
 			<Add option="-Wall" />
 			<Add option="-DSFML_STATIC" />
 			<Add directory="C:/SFML-2.1/include" />
+			<Add directory="C:/Users/user/Documents/SFML-2.3.2/include" />
 		</Compiler>
 		<Linker>
 			<Add library="sfml-graphics" />
 			<Add library="sfml-window" />
 			<Add library="sfml-system" />
 			<Add directory="C:/SFML-2.1/lib" />
+			<Add directory="C:/Users/user/Documents/SFML-2.3.2/lib" />
 		</Linker>
+		<Unit filename="CrearJugador.cpp" />
+		<Unit filename="CrearJugador.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="utility.cpp" />
 		<Unit filename="utility.h" />
