--- a/Prueba_FuncionSet/Prueba_FuncionSet.cbp
+++ b/Prueba_FuncionSet/Prueba_FuncionSet.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="monopoly" />
+		<Option title="Prueba_FuncionSet" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/monopoly" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Prueba_FuncionSet" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/monopoly" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Prueba_FuncionSet" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -25,36 +25,22 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add library="sfml-graphics" />
-					<Add library="sfml-window" />
-					<Add library="sfml-system" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-fexceptions" />
 			<Add option="-DSFML_STATIC" />
-			<Add directory="C:/Users/user/Documents/SFML-2.3.2/include" />
 			<Add directory="C:/SFML-2.1/include" />
 		</Compiler>
 		<Linker>
 			<Add library="sfml-graphics" />
 			<Add library="sfml-window" />
 			<Add library="sfml-system" />
-			<Add directory="C:/Users/user/Documents/SFML-2.3.2/lib" />
 			<Add directory="C:/SFML-2.1/lib" />
 		</Linker>
-		<Unit filename="Banco.cpp" />
-		<Unit filename="Banco.h" />
-		<Unit filename="CrearJugador.cpp" />
-		<Unit filename="CrearJugador.h" />
-		<Unit filename="JugarMonopoly.cpp" />
-		<Unit filename="JugarMonopoly.h" />
-		<Unit filename="Mover.cpp" />
-		<Unit filename="Mover.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="utility.cpp" />
-		<Unit filename="utility.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
