--- a/Prueba_FuncionSet/Prueba_FuncionSet.cbp
+++ b/Prueba_FuncionSet/Prueba_FuncionSet.cbp
@@ -33,12 +33,14 @@
 			<Add option="-fexceptions" />
 			<Add option="-DSFML_STATIC" />
 			<Add directory="C:/SFML-2.1/include" />
+			<Add directory="C:/Users/user/Documents/SFML-2.3.2/include" />
 		</Compiler>
 		<Linker>
 			<Add library="sfml-graphics" />
 			<Add library="sfml-window" />
 			<Add library="sfml-system" />
 			<Add directory="C:/SFML-2.1/lib" />
+			<Add directory="C:/Users/user/Documents/SFML-2.3.2/lib" />
 		</Linker>
 		<Unit filename="main.cpp" />
 		<Extensions>
