--- a/Tarea_Herencia/Tarea_Herencia.cbp
+++ b/Tarea_Herencia/Tarea_Herencia.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="PruebaVectores" />
+		<Option title="Tarea_Herencia" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/PruebaVectores" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Tarea_Herencia" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/PruebaVectores" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Tarea_Herencia" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,10 +32,14 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="Mi_vector.cpp" />
-		<Unit filename="Mi_vector.h" />
-		<Unit filename="Prueba.cpp" />
-		<Unit filename="Prueba.h" />
+		<Unit filename="Carta.cpp" />
+		<Unit filename="Carta.h" />
+		<Unit filename="Estaciones.cpp" />
+		<Unit filename="Estaciones.h" />
+		<Unit filename="Propiedad.cpp" />
+		<Unit filename="Propiedad.h" />
+		<Unit filename="Servicios.cpp" />
+		<Unit filename="Servicios.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
